# RoomMonitor

./: .gitattributes  20190812_meet.md  20191102.md  Dbase.cpp  Esp32 Spiegazione.docx  Incr_CIrc.txt  IntroImpostazioni.txt.docx  Presentazione.md  QUERY.txt  README.md  data_board_stanza_22112019.sql  data_stanza3_22112019.sql  data_stanza_08112019.sql  dump 10-10.txt  dump_23102019.sql  guida Qt su Clion.txt  meeting_22112019.txt
RoomMonitor/: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  Doxyfile  MonitoringServer.cpp  MonitoringServer.h  Packet.cpp  Packet.h  Point2d.cpp  Point2d.h  PositionData.cpp  PositionData.h  Query.cpp  Query.h  README.md  Strings.cpp  Strings.h  Styles.cpp  Styles.h  Utility.cpp  Utility.h  about.ui  dati_di_prova.sql  main.cpp  main.ui  query.sql  res.qrc  resources.rc  settings.ui
RoomMonitor/doc/html/: _analysis_worker_8cpp.html  _analysis_worker_8cpp__incl.dot  _analysis_worker_8cpp__incl.md5  _analysis_worker_8h.html  _analysis_worker_8h__dep__incl.dot  _analysis_worker_8h__dep__incl.md5  _analysis_worker_8h__incl.dot  _analysis_worker_8h__incl.md5  _analysis_worker_8h_source.html  _board_8cpp.html  _board_8cpp__incl.dot  _board_8cpp__incl.md5  _board_8h.html  _board_8h__dep__incl.dot  _board_8h__dep__incl.md5  _board_8h__incl.dot  _board_8h__incl.md5  _board_8h_source.html  _circle_8cpp.html  _circle_8cpp__incl.dot  _circle_8cpp__incl.md5  _circle_8h.html  _circle_8h__dep__incl.dot  _circle_8h__dep__incl.md5  _circle_8h__incl.dot  _circle_8h__incl.md5  _circle_8h_source.html  _last_mac_8cpp.html  _last_mac_8cpp__incl.dot  _last_mac_8cpp__incl.md5  _last_mac_8h.html  _last_mac_8h__dep__incl.dot  _last_mac_8h__dep__incl.md5  _last_mac_8h__incl.dot  _last_mac_8h__incl.md5  _last_mac_8h_source.html  _live_chart_8cpp.html  _live_chart_8cpp__incl.dot  _live_chart_8cpp__incl.md5  _live_chart_8h.html  (+1161 more)
RoomMonitor/doc/latex/: _analysis_worker_8cpp.tex  _analysis_worker_8cpp__incl.dot  _analysis_worker_8cpp__incl.md5  _analysis_worker_8h.tex  _analysis_worker_8h__dep__incl.dot  _analysis_worker_8h__dep__incl.md5  _analysis_worker_8h__incl.dot  _analysis_worker_8h__incl.md5  _board_8cpp.tex  _board_8cpp__incl.dot  _board_8cpp__incl.md5  _board_8h.tex  _board_8h__dep__incl.dot  _board_8h__dep__incl.md5  _board_8h__incl.dot  _board_8h__incl.md5  _circle_8cpp.tex  _circle_8cpp__incl.dot  _circle_8cpp__incl.md5  _circle_8h.tex  _circle_8h__dep__incl.dot  _circle_8h__dep__incl.md5  _circle_8h__incl.dot  _circle_8h__incl.md5  _last_mac_8cpp.tex  _last_mac_8cpp__incl.dot  _last_mac_8cpp__incl.md5  _last_mac_8h.tex  _last_mac_8h__dep__incl.dot  _last_mac_8h__dep__incl.md5  _last_mac_8h__incl.dot  _last_mac_8h__incl.md5  _live_chart_8cpp.tex  _live_chart_8cpp__incl.dot  _live_chart_8cpp__incl.md5  _live_chart_8h.tex  _live_chart_8h__dep__incl.dot  _live_chart_8h__dep__incl.md5  _live_chart_8h__incl.dot  _live_chart_8h__incl.md5  (+754 more)
RoomMonitor/monitoring/: Board.cpp  Board.h  Circle.cpp  Circle.h  MonitoringServer.cpp  MonitoringServer.h  Packet.cpp  Packet.h  Point2d.cpp  Point2d.h  PositionData.cpp  PositionData.h  Room.cpp  Room.h
RoomMonitor/monitoring/classes/: Statistic.cpp  Statistic.h
RoomMonitor/windows/: InformationWindow.cpp  InformationWindow.h  MainWindow.cpp  MainWindow.h  SettingDialog.cpp  SettingDialog.h  about.ui  addboard.ui  localize.ui  main.ui  main_vale.ui  modboard.ui  random.ui  settings.ui
RoomMonitor/windows/classes/: AnalysisWorker.cpp  AnalysisWorker.h  LastMac.cpp  LastMac.h  MacLastPos.cpp  MacLastPos.h  MacOccurrence.cpp  (+3 more)
Server/: CMakeLists.txt  DequeThreadSafe.cpp  Packet.cpp  Ricezione.h
Server/Project1/: Project1.vcxproj  main.cpp
(+363 files in other folders)
